Correct file-structure and rename images in stylesheet

--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
 	<main>
 		<section id="about" class="text-center">
 			<div id="my-img">
-				<img src="Photo.jpg">
+				<img src="media/Photo.jpg">
 			</div>
 
 			<div id="about-para" class="text-center">
