Add smooth scroll using javascript

--- a/Index.html
+++ b/Index.html
@@ -11,31 +11,31 @@
 		<nav id="horizontal-list-container">
 			<ul class="horizontal-list text-center site-nav">
 				<li>
-					<a href="#"> Home </a>
+					<a href="#" data-section="body-header" class="nav-bar-links"> Home </a>
 				</li>
 
 				<li>
-					<a href="#about"> About </a>
+					<a href="#about" data-section="about" class="nav-bar-links"> About </a>
 				</li>
 
 				<li>
-					<a href="#skills"> Skills </a>
+					<a href="#skills" data-section="skills" class="nav-bar-links"> Skills </a>
 				</li>
 
 				<li>
-					<a href="#education"> Education </a>
+					<a href="#education" data-section="education" class="nav-bar-links"> Education </a>
 				</li>
 
 				<li>
-					<a href="#experience"> Experience </a>
+					<a href="#experience" data-section="experience" class="nav-bar-links"> Experience </a>
 				</li>
 
 				<li>
-					<a href="#portfolio"> Portfolio </a>
+					<a href="#portfolio" data-section="portfolio" class="nav-bar-links"> Portfolio </a>
 				</li>
 
 				<li>
-					<a href="#contact"> Contact </a>
+					<a href="#contact" data-section="contact" class="nav-bar-links"> Contact </a>
 				</li>
 			</ul>
 		</nav>
@@ -332,7 +332,9 @@
 						</li>
 					</ul>
 				</div>
-		</section>					
+		</section>
+
+		<script type="text/javascript" src="script.js"></script>					
 			
 
 </body>
