Add auto-fill for skills bars

--- a/Index.html
+++ b/Index.html
@@ -88,31 +88,31 @@
 
 			<div id="all-skills">
 				<div class="skill">
-					<div class="skill-level-80">
+					<div class="skill-level-orange" data-skill-level="90">
 						<span class="skill-title"> C++ </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-80">
+					<div class="skill-level-orange" data-skill-level="80">
 						<span class="skill-title"> JAVA </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-70">
+					<div class="skill-level-blue" data-skill-level="80">
 						<span class="skill-title"> HTML </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-60">
+					<div class="skill-level-blue" data-skill-level="75">
 						<span class="skill-title"> CSS </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-70">
+					<div class="skill-level-blue" data-skill-level="85">
 						<span class="skill-title"> DSA </span>
 					</div>
 				</div>
