update profile pic and add links

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 			<div>
 				<ul class="horizontal-list text-center">
 					<li class="social-icons">
-						<a href=""><i class="fab fa-linkedin-in"></i></a>
+						<a href="https://www.linkedin.com/in/aayush-bhaglal/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 					</li>
 
 					<li class="social-icons">
-						<a href=""><i class="fab fa-stack-overflow"></i></a>
+						<a href="https://stackoverflow.com/users/13728393/aayush-bhaglal?tab=profile" target="_blank"><i class="fab fa-stack-overflow"></i></a>
 					</li>
 
 					<li class="social-icons">
-						<a href=""><i class="fab fa-facebook-f"></i></a>
+						<a href="https://www.facebook.com/ABhaglal" target="_blank"><i class="fab fa-facebook-f"></i></a>
 					</li>
 
 					<li class="social-icons">
-						<a href=""><i class="fab fa-quora"></i></a>
+						<a href="https://www.quora.com/profile/Aayush-Bhaglal" target="_blank"><i class="fab fa-quora"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -75,7 +75,7 @@
 			</div>
 
 			<div id="about-para" class="text-center">
-				<p> My name is Aayush Bhaglal and I am a final year student from BITS Pilani KK Birla Goa Campus. I love programming and anything related to technology. I am also interested in Web Development. Apart from academics, some of my other hobbies include Badminton and Swimming. I also like to travel and explore new places.</p>
+				<p> I am a final year student from <span class="bold-colored-text">BITS Pilani KK Birla Goa Campus</span>. I am a <span class="bold-colored-text">tech enthusiast</span> with special interest in <span class="bold-colored-text">web development</span>, who loves simplyfing and solving challenging problems with the power of technology. Apart from academics, some of my other hobbies include <span class="bold-colored-text">badminton, swimming and travelling</span>.</p>
 			</div>
 		</section>
 
@@ -94,26 +94,50 @@
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-orange" data-skill-level="80">
+					<div class="skill-level-blue" data-skill-level="80">
 						<span class="skill-title"> JAVA </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-blue" data-skill-level="80">
+					<div class="skill-level-orange" data-skill-level="75">
 						<span class="skill-title"> HTML </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-blue" data-skill-level="75">
+					<div class="skill-level-blue" data-skill-level="70">
 						<span class="skill-title"> CSS </span>
 					</div>
 				</div>
 
 				<div class="skill">
-					<div class="skill-level-blue" data-skill-level="85">
-						<span class="skill-title"> DSA </span>
+					<div class="skill-level-orange" data-skill-level="80">
+						<span class="skill-title"> DS </span>
+					</div>
+				</div>
+
+				<div class="skill">
+					<div class="skill-level-blue" data-skill-level="80">
+						<span class="skill-title"> Algorithms </span>
+					</div>
+				</div>
+
+				<div class="skill">
+					<div class="skill-level-orange" data-skill-level="60">
+						<span class="skill-title"> Javascript </span>
+					</div>
+				</div>
+
+				<div class="skill">
+					<div class="skill-level-blue" data-skill-level="75">
+						<span class="skill-title"> OOP </span>
+					</div>
+				</div>
+
+				<div class="skill">
+					<div class="skill-level-orange" data-skill-level="90">
+						<span class="skill-title"> Microsoft Excel </span>
 					</div>
 				</div>
 			</div>
@@ -261,14 +285,26 @@
 
 			<div id="all-projects">
 				<div id="project-1">
-					<a href="">
-						<div class="hover-change text-center"><span class="project-title">Project 1</span></div>
+					<a href="https://github.com/Aayush-B/Resume-Website">
+						<div class="hover-change text-center"><span class="project-title">Resume Website</span></div>
 					</a>
 				</div>
 
 				<div id="project-2">
 					<a href="">
-						<div class="hover-change text-center"><span class="project-title">Project 2</span></div>
+						<div class="hover-change text-center"><span class="project-title">Shorty URL - URL Shortening Service</span></div>
+					</a>
+				</div>
+
+				<div id="project-3">
+					<a href="https://github.com/Aayush-B/Ping-Pong-Game">
+						<div class="hover-change text-center"><span class="project-title">Ping Pong Game</span></div>
+					</a>
+				</div>
+
+				<div id="project-4">
+					<a href="https://github.com/Aayush-B/Ping-Pong-Game">
+						<div class="hover-change text-center"><span class="project-title">Music Streaming Website - UI</span></div>
 					</a>
 				</div>
 			</div>
@@ -284,9 +320,9 @@
 			<div id="contact-container">
 				<div id="contact-form">
 					<form>
-						<input type="text" name="name" class="form-input" placeholder="Your Name" required>
-						<input type="email" name="email" class="form-input" placeholder="Your Email-ID" required>
-						<input type="text" name="message" class="form-input" placeholder="Your Message" required>
+						<input type="text" name="name" class="form-input" placeholder="Your Name" id="form-name" required>
+						<input type="email" name="email" class="form-input" placeholder="Your Email-ID" id="form-email" required>
+						<input type="text" name="message" class="form-input" placeholder="Your Message" id="form-message" required>
 					</form>
 
 					<button type="submit" id="form-submit"> SEND MESSAGE </button>
@@ -316,19 +352,19 @@
 				<div id="contact-social-icons">
 					<ul class="horizontal-list text-center">
 						<li class="social-icons">
-							<a href=""><i class="fab fa-linkedin-in"></i></a>
+							<a href="https://www.linkedin.com/in/aayush-bhaglal/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 						</li>
 
 						<li class="social-icons">
-							<a href=""><i class="fab fa-stack-overflow"></i></a>
+							<a href="https://stackoverflow.com/users/13728393/aayush-bhaglal?tab=profile" target="_blank"><i class="fab fa-stack-overflow"></i></a>
 						</li>
 
 						<li class="social-icons">
-							<a href=""><i class="fab fa-facebook-f"></i></a>
+							<a href="https://www.facebook.com/ABhaglal" target="_blank"><i class="fab fa-facebook-f"></i></a>
 						</li>
 
 						<li class="social-icons">
-							<a href=""><i class="fab fa-quora"></i></a>
+							<a href="https://www.quora.com/profile/Aayush-Bhaglal" target="_blank"><i class="fab fa-quora"></i></a>
 						</li>
 					</ul>
 				</div>
