add link in shorty-url project

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 				</div>
 
 				<div id="project-2">
-					<a href="">
+					<a href="https://shorty-url.aayushb.com/">
 						<div class="hover-change text-center"><span class="project-title">Shorty URL - URL Shortening Service</span></div>
 					</a>
 				</div>
