correct link for music streaming project

--- a/index.html
+++ b/index.html
@@ -285,25 +285,25 @@
 
 			<div id="all-projects">
 				<div id="project-1">
-					<a href="https://github.com/Aayush-B/Resume-Website">
+					<a href="https://github.com/Aayush-B/Resume-Website" target="_blank">
 						<div class="hover-change text-center"><span class="project-title">Resume Website</span></div>
 					</a>
 				</div>
 
 				<div id="project-2">
-					<a href="https://shorty-url.aayushb.com/">
+					<a href="https://shorty-url.aayushb.com/" target="_blank">
 						<div class="hover-change text-center"><span class="project-title">Shorty URL - URL Shortening Service</span></div>
 					</a>
 				</div>
 
 				<div id="project-3">
-					<a href="https://github.com/Aayush-B/Ping-Pong-Game">
+					<a href="https://github.com/Aayush-B/Ping-Pong-Game" target="_blank">
 						<div class="hover-change text-center"><span class="project-title">Ping Pong Game</span></div>
 					</a>
 				</div>
 
 				<div id="project-4">
-					<a href="https://github.com/Aayush-B/Ping-Pong-Game">
+					<a href="https://github.com/Aayush-B/Music-Streaming-Website-Project" target="_blank">
 						<div class="hover-change text-center"><span class="project-title">Music Streaming Website - UI</span></div>
 					</a>
 				</div>
@@ -341,7 +341,7 @@
 					<br>
 
 					<i class="fas fa-mobile-alt"></i>
-					<span> &nbsp&nbsp9130092088 </span>	
+					<span> &nbsp&nbsp9130092088 </span>
 					<br>
 
 					<i class="far fa-envelope"></i>
@@ -370,7 +370,7 @@
 				</div>
 		</section>
 
-		<script type="text/javascript" src="script.js"></script>					
-			
+		<script type="text/javascript" src="script.js"></script>
+
 
 </body>
