rename skill Microsoft Excel to Excel

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 				<div class="skill">
 					<div class="skill-level-orange" data-skill-level="90">
-						<span class="skill-title"> Microsoft Excel </span>
+						<span class="skill-title"> Excel </span>
 					</div>
 				</div>
 			</div>
