add Go to skills list

--- a/index.html
+++ b/index.html
@@ -101,42 +101,48 @@
 
 				<div class="skill">
 					<div class="skill-level-orange" data-skill-level="75">
-						<span class="skill-title"> HTML </span>
+						<span class="skill-title"> Go </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-blue" data-skill-level="70">
-						<span class="skill-title"> CSS </span>
+						<span class="skill-title"> HTML </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-orange" data-skill-level="80">
-						<span class="skill-title"> DS </span>
+						<span class="skill-title"> CSS </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-blue" data-skill-level="80">
-						<span class="skill-title"> Algorithms </span>
+						<span class="skill-title"> DS </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-orange" data-skill-level="60">
-						<span class="skill-title"> Javascript </span>
+						<span class="skill-title"> Algorithms </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-blue" data-skill-level="75">
-						<span class="skill-title"> OOP </span>
+						<span class="skill-title"> Javascript </span>
 					</div>
 				</div>
 
 				<div class="skill">
 					<div class="skill-level-orange" data-skill-level="90">
+						<span class="skill-title"> OOP </span>
+					</div>
+				</div>
+
+                <div class="skill">
+					<div class="skill-level-blue" data-skill-level="90">
 						<span class="skill-title"> Excel </span>
 					</div>
 				</div>
