--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</div>
 
 			<div id="about-para" class="text-center">
-				<p> I am a final year student from <span class="bold-colored-text">BITS Pilani KK Birla Goa Campus</span>. I am a <span class="bold-colored-text">tech enthusiast</span> with special interest in <span class="bold-colored-text">web development</span> who loves simplyfing and solving challenging problems with the power of technology. Apart from academics, some of my other hobbies include <span class="bold-colored-text">badminton, swimming and travelling</span>.</p>
+				<p> I am a final year student from <span class="bold-colored-text">BITS Pilani KK Birla Goa Campus</span>. I am a <span class="bold-colored-text">tech enthusiast</span> with special interest in <span class="bold-colored-text">web development</span> who loves simplifying and solving challenging problems with the power of technology. Apart from academics, some of my other hobbies include <span class="bold-colored-text">badminton, swimming and travelling</span>.</p>
 			</div>
 		</section>
 
