--- a/index.html
+++ b/index.html
@@ -298,19 +298,19 @@
 
 				<div id="project-2">
 					<a href="https://shorty-url.aayushb.com/" target="_blank">
-						<div class="hover-change text-center"><span class="project-title">Shorty URL - URL Shortening Service</span></div>
+						<div class="hover-change text-center"><span class="project-title">URL Shortening Service</span></div>
 					</a>
 				</div>
 
 				<div id="project-3">
 					<a href="https://github.com/Aayush-B/Ping-Pong-Game" target="_blank">
-						<div class="hover-change text-center"><span class="project-title">Ping Pong Game</span></div>
+						<div class="hover-change text-center"><span class="project-title">Ping Pong</span></div>
 					</a>
 				</div>
 
 				<div id="project-4">
 					<a href="https://github.com/Aayush-B/Music-Streaming-Website-Project" target="_blank">
-						<div class="hover-change text-center"><span class="project-title">Music Streaming Website - UI</span></div>
+						<div class="hover-change text-center"><span class="project-title">Music Player - UI</span></div>
 					</a>
 				</div>
 			</div>
