--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<title> Aayush Bhaglal </title>
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="css/main.css">
 		<script src="https://kit.fontawesome.com/7ac4bb41bf.js" crossorigin="anonymous"></script>
 </head>
 
@@ -376,7 +376,7 @@
 				</div>
 		</section>
 
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 
 
 </body>
