add dotpe in experience

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="timeline-pointer-3">
 				</div>
 
-				<div id="timeline-divider">
+				<div id="education-timeline-divider">
 				</div>
 
 				<div id="timeline-slider">
@@ -233,7 +233,12 @@
 				<div class="timeline-pointer-3">
 				</div>
 
-				<div id="timeline-divider">
+                <div class="timeline-pointer-4">
+				</div>
+
+                <div></div>
+
+				<div id="experience-timeline-divider">
 				</div>
 
 				<div id="timeline-slider">
@@ -274,7 +279,20 @@
 						<div class="job-header">
 							<h3> Business Intern </h3>
 							<h4> Swiggy, Bangalore
-								<h5> January, 2020 - Present </h5>
+								<h5> January, 2020 - June, 2020 </h5>
+						</div>
+					</div>
+				</div>
+
+                <div class="timeline-item">
+					<div class="timeline-item-heading">
+						<div id="dotpe-logo">
+						</div>
+
+						<div class="job-header">
+							<h3> Software Engineer </h3>
+							<h4> DotPe, Gurgaon
+								<h5> June, 2020 - Present </h5>
 						</div>
 					</div>
 				</div>
