change name of url shortening project

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 				<div id="project-2">
 					<a href="https://shorty-url.aayushb.com/" target="_blank">
-						<div class="hover-change text-center"><span class="project-title">URL Shortening Service</span></div>
+						<div class="hover-change text-center"><span class="project-title">Shorty URL</span></div>
 					</a>
 				</div>
 
