update the link to shorty-url project to point to github

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 				</div>
 
 				<div id="project-2">
-					<a href="https://shorty-url.aayushb.com/" target="_blank">
+					<a href="https://github.com/aayushbhaglal/shorty-url" target="_blank">
 						<div class="hover-change text-center"><span class="project-title">Shorty URL</span></div>
 					</a>
 				</div>
