--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
 						<div class="job-header">
 							<h3> Summer Intern </h3>
-							<h4> Central Electronics Engineering Research Institute
+							<h4> Central Electronics Engineering Research Institute, Pilani
 								<h5> May, 2017 - July, 2017 </h5>
 						</div>
 					</div>
